# SwarmFormer

./: README.md  swarmformer_and_baselines.ipynb
install/: local_setup.sh  setup.sh
install/swarm_data/lib/swarm_data/: autopilot.py  dataset_create.py  fast_spawner.py  gossip_manager.py  robot_spawner.py  swarm_transformer.py
install/swarm_data/share/swarm_data/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/swarm_data/share/swarm_data/launch/: formation_goal_launch.launch.py  swarm_launch.launch.py
install/swarm_data/share/swarm_data/worlds/: swarm.world
install/swarm_msgs/share/swarm_msgs/: local_setup.sh  package.sh  package.xml
install/swarm_msgs/share/swarm_msgs/cmake/: export_swarm_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  swarm_msgs__rosidl_typesupport_cppExport.cmake  swarm_msgs__rosidl_typesupport_introspection_cExport.cmake  (+1 more)
log/: latest_build
src/swarm_data/: CMakeLists.txt
src/swarm_data/launch/: formation_goal_launch.launch.py  movement_launch.launch.py  obstacle_spawn_launch.launch.py  robot_spawn_launch.launch.py  swarm_launch.launch.py
src/swarm_data/src/: check_dataset.py  convert_pkl2npz.py  dataset_collector.py  diverse_scenarios.json  expert_controller.py  feature_dims.py  formation_command.py  make_dataset.py  obstacle_spawner.py  parsing_data.py  parsing_leftover.py  robot_spawner.py  scenario_generator.py
src/swarm_data/src/training_data/: scenarios.json
src/swarm_msgs/: CMakeLists.txt
src/swarm_msgs/msg/: GMMParams.msg
(+47 files in other folders)
